--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977994.md#1" target="_blank">林辉：一篇文章惹毛动怒 民间顾准拒辱自尽</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/20/n11267735.md#1" target="_blank">庆法轮大法日 以色列女画家感悟大法指引方向</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/8/n11308535.md#1" target="_blank">金雁：“既得利益者”何以成为反对苏维埃的先锋?</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/1/10/n2392045.md#1" target="_blank">中国人想问又不敢问的法轮功问题解答</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
